--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#inicio"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
+                <a class="navbar-brand" href="#inicio"><img src="assets/img/clubdeeventostimer.png" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -47,8 +47,8 @@
         <section class="page-section" id="services">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Servicios</h2><br/>
-                    <!--h3 class="section-subheading text-muted"></h3-->
+                    <h2 class="section-heading text-uppercase">Servicios</h2>
+                    <h3 class="section-subheading text-muted">Maratón | Duatlón | Triatlón | Trail Running | Ciclismo | MTB</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-6">
@@ -70,12 +70,12 @@
                 </div>
             </div>
         </section>
-        <!-- Últimos Eventos-->
+        <!-- Últimos Eventos--><!--#03a9f4;-->
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Últimos Eventos</h2>
-                    <h3 class="section-subheading text-muted">Maratón | Duatlón | Triatlón | Trail Running | Ciclismo | MTB</h3>
+                    <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -89,7 +89,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Aconcagua Ultra Trail</div>
-                                <div class="portfolio-caption-subheading text-uppercase">22/02/2020</div>
+                                <b><div class="portfolio-caption-subheading text-primary">2020</div></b>
                             </div>
                         </div>
                     </div>
