--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="masthead-subheading">Busca tu Resultado!</div>
                 <div class="masthead-heading text-uppercase">Nombre del Evento</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Buscar</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="">Buscar</a>
             </div>
         </header>
         <!-- Services-->
@@ -49,7 +49,6 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Servicios</h2>
                     <h3 class="section-subheading text-muted">Maratón | Duatlón | Triatlón | Trail Running | Ciclismo | MTB</h3>
-                </div>
                 <div class="row text-center">
                     <div class="col-md-6">
                         <span class="fa-stack fa-4x">
@@ -67,6 +66,7 @@
                         <h4 class="my-3">Buscate con tu Dorsal</h4>
                         <p class="text-muted">Buscá tus resultados a traves de tu dorsal, nombre o apellido.</p>
                     </div>
+                </div>
                 </div>
             </div>
         </section>
